--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div id="pagination">
       <!-- Pagination buttons will be dynamically added here -->
     </div>
-    <div class="movie-details" id="movieDetails"></div>
-    <div id="popupContainer" class="popup">
+    <!-- <div class="movie-details" id="movieDetails"></div> -->
+    <!-- <div id="popupContainer" class="popup">
         <div class="popup-content">
              
             <h2>Title</h2>
@@ -37,13 +37,10 @@
             <button id="submitReview">Submit Review</button>
             <span class="close" id="closeButton">&times;</span>
         </div>
-    </div>
+    </div> -->
     <div id="filter-modal" class="modal">
         <span class="close">&times;</span>
         <div class="modal-content" id="movieDetails">
-          <!-- Close button -->
-          <!-- <div class="movie-details" id="movieDetails">
-          </div> -->
         </div>
     </div>
   </main>
