--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Movie List Application</title>
+  <title>Movie List API</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,21 +23,7 @@
     <div id="pagination">
       <!-- Pagination buttons will be dynamically added here -->
     </div>
-    <!-- <div class="movie-details" id="movieDetails"></div> -->
-    <!-- <div id="popupContainer" class="popup">
-        <div class="popup-content">
-             
-            <h2>Title</h2>
-            <img src="path/to/your/image.jpg" alt="Movie Poster">
-            <p>Movie Plot</p>
-            <label for="rating">Rate the movie (1 to 5):</label>
-            <input type="number" id="rating" name="rating" min="1" max="5">
-            <label for="comment">Your Comment:</label>
-            <textarea id="comment" name="comment" rows="4" cols="50"></textarea>
-            <button id="submitReview">Submit Review</button>
-            <span class="close" id="closeButton">&times;</span>
-        </div>
-    </div> -->
+     
     <div id="filter-modal" class="modal">
         <span class="close">&times;</span>
         <div class="modal-content" id="movieDetails">
